# serde_bytefmt

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
src/: base64_vec.rs  base64_vec_type.rs  hex_array.rs  hex_array_type.rs  lib.rs  schemars_util.rs
tests/integration/: base64.rs  base64_schemars.rs  base64_serde.rs  hex.rs  hex_schemars.rs  hex_serde.rs  main.rs  typify_roundtrip.rs
tests/output/: typify-base64-direct.rs  typify-base64-with-attr.rs  typify-hex-direct.rs  typify-hex-with-attr.rs
